Removed Lovable text and icon from index.html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EchoQuest: The Sound Navigation Challenge</title>
     <meta name="description" content="Audio-first maze navigation game for visually impaired and neurodivergent children" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="dineXcode" />
 
     <meta property="og:title" content="echo-quest-soundscape-maze" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="dineXcode maze game" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
