--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EchoQuest: The Sound Navigation Challenge</title>
     <meta name="description" content="Audio-first maze navigation game for visually impaired and neurodivergent children" />
-    <meta name="author" content="dineXcode" />
+    <meta name="author" content="AbinRajMNambiar" />
 
     <meta property="og:title" content="echo-quest-soundscape-maze" />
-    <meta property="og:description" content="dineXcode maze game" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:description" content="AbinRajMNambiar maze game" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+
   </head>
 
   <body>
